@@ -35,7 +35,7 @@ Digraph class
 from pygraph.algorithms import *
 from pygraph.algorithms import filters
 from pygraph.algorithms import traversal
-from pygraph.classes.Exceptions import *
+from pygraph.classes.exceptions import *
 
 
 class digraph (object):
